# mako-pr

./: CLAUDE.md  CMakeLists.txt  Dockerfile.ubuntu22  Makefile  NEW_CONFIG_FORMAT.md  README.md  TODO.md  apt_packages.sh  bench_1p_comparison.yml  bench_2p_comparison.py  bench_2p_output.txt  bench_comparison_output.txt  bench_contention_output.txt  bench_det_scenarios.py  bench_det_scenarios_output.txt  bench_deterministic.sh  bench_deterministic_single.sh  bench_eval_deterministic.py  bench_eval_deterministic_low.yml  bench_eval_output.txt  bench_extended.py  bench_fixed_output.txt  bench_full_comparison.txt  bench_occ_1p.yml  bench_occ_2p.yml  bench_occ_test.txt  bench_occ_vs_det.sh  bench_quick_comparison.py  bench_quick_test.py  bench_reproducibility.py  bench_reproducibility_output.txt  bench_run_eval.py  bench_simple_contention.py  benchmark_2p_comparison_20251205_121703.csv  benchmark_comparison_20251205_122847.csv  benchmark_results.json  check_size.cc  combined_logs.txt  deterministic_benchmark_20251205_114752.csv  deterministic_scenarios_20251205_123446.csv  (+40 more)
bash/: batch_op_zoo2.sh  op.sh  run_2pc_no_rep.sh  run_x.sh  shard.sh
ci/: ci.sh
config/: deterministic.yml  deterministic_converted.yml  deterministic_micro.yml  deterministic_single.yml  deterministic_valid.yml  mako_new_format.yml  mako_single_node.yml
config/1leader_2followers/: paxos10_shardidx3.yml  paxos10_shardidx4.yml  paxos10_shardidx5.yml  paxos10_shardidx6.yml  paxos10_shardidx7.yml  paxos10_shardidx8.yml  paxos10_shardidx9.yml  paxos11_shardidx3.yml  paxos11_shardidx4.yml  paxos11_shardidx5.yml  paxos11_shardidx6.yml  paxos11_shardidx7.yml  paxos11_shardidx8.yml  paxos11_shardidx9.yml  paxos12_shardidx3.yml  paxos12_shardidx4.yml  paxos12_shardidx5.yml  paxos12_shardidx6.yml  paxos12_shardidx7.yml  paxos12_shardidx8.yml  paxos12_shardidx9.yml  paxos13_shardidx3.yml  paxos13_shardidx4.yml  paxos13_shardidx5.yml  paxos13_shardidx6.yml  paxos13_shardidx7.yml  paxos13_shardidx8.yml  paxos13_shardidx9.yml  paxos14_shardidx3.yml  paxos14_shardidx4.yml  paxos14_shardidx5.yml  paxos14_shardidx6.yml  paxos14_shardidx7.yml  paxos14_shardidx8.yml  paxos14_shardidx9.yml  paxos15_shardidx3.yml  paxos15_shardidx4.yml  paxos15_shardidx5.yml  paxos15_shardidx6.yml  paxos15_shardidx7.yml  (+191 more)
doc/: DOCKER_BUILD.md  DOCKER_BUILD_SUCCESS.md  DOCKER_VERIFICATION.md  RRR_SAFETY_ROADMAP.md  architecture.md  concepts.md  config.md  coroutines_guide.md  disk_persistence.md  index.md  install-desktop.md  install.md  introduction.md  multi_shard_single_process.md  quickstart.md  rpc-benchmark.md  rrr-rpc.md  rrr-rustycpp-migration-plan.md  table-allocation.md  transport_backends.md  transport_stop_fix.md
examples/: baselines.sh  common.h  continuousTransactions.cc  run_rocksdb_test.sh  simplePaxos.cc  simplePaxos.sh  simpleTransaction.cc  simpleTransactionRep.cc  statistics.h  test_1shard_no_replication.sh  test_1shard_replication.sh  test_1shard_replication_simple.sh  test_2shard_no_replication.sh  test_2shard_no_replication_simple.sh  test_2shard_replication.sh  test_2shard_replication_simple.sh  test_callback_demo.cc  test_continuous_transactions.sh  test_ordered_callbacks.cc  test_partitioned_queues.cc  test_rocksdb_persistence.cc  test_stress_partitioned_queues.cc
pylib/: ps.py
rust-lib/: README.md
src/: helloworld.cc  nc_main.cc
src/bench/tpcc/: new_order.cc  procedure.cc  sharding.cc
src/deptran/: __dep__.h  benchmark_control_rpc.cc  client_worker.cc  client_worker.h  communicator.cc  communicator.h  config.cc  constants.h  frame.cc  frame.h  helloworld.h  helloworld.py  marshal-value.cc  network.h  paxos_main_helper.cc  paxos_worker.cc  paxos_worker.h  procedure.h  rcc_rpc.h  rcc_rpc.py  s_main.cc  s_main.h  server_worker.cc  server_worker.h  service.cc  service.h  sharding.cc  tx.cc
src/deptran/deterministic/: coordinator.cc  coordinator.h  frame.cc  frame.h  scheduler.cc  scheduler.h
src/deptran/februus/: frame.cc  frame.h
src/deptran/janus/: frame.cc  frame.h
src/deptran/paxos/: commo.cc  commo.h  coordinator.cc  coordinator.h  frame.cc  frame.h  server.cc  server.h  service.cc
src/deptran/rcc/: frame.cc  frame.h
src/deptran/tapir/: frame.cc  frame.h
src/deptran/troad/: troad.h
src/mako/: README.md  batch-exec-1.sh  batch-runner.sh  compile-a.sh  compile-b.sh  compile-coco.sh  count-a.sh  count-b.sh  counter.cc  failure_recover_exp_coco.sh  mako.hh  one-click.py  rocksdb_persistence.cc  rocksdb_persistence.h  rocksdb_persistence_fwd.h  silo_small_vector.h  util.h
src/mako/benchmarks/: abstract_db.cc  abstract_db.h  abstract_ordered_index.h  bench.cc  bench.h  benchmark_config.h  bid.cc  common.h  common2.h  dbtest.cc  encstress.cc  mbta_sharded_ordered_index.hh  mbta_wrapper.hh  paxos_async_commit_test.cc  queue.cc  rocksdb_replay_app.cc  rpc_setup.cc  rpc_setup.h  sync_util_init.cc  tpcc.cc
src/mako/lib/: client.cc  client.h  common.h  configuration.cc  configuration.h  erpc_backend.cc  erpc_backend.h  erpc_request_handle.h  fasttransport.cc  fasttransport.h  helper_queue.cc  helper_queue.h  multi_transport_manager.cc  multi_transport_manager.h  rrr_rpc_backend.cc  rrr_rpc_backend.h  server.cc  server.h  shardClient.cc  shardClient.h  transport_backend.h  transport_request_handle.h
src/mako/masstree/: GNUmakefile  config.h  config.status  configure  small_vector.hh
src/mako/record/: encoder.h
src/rrr/base/: basetypes.cpp  basetypes.hpp  debugging.cpp  debugging.hpp  logging.cpp  logging.hpp  misc.cpp  misc.hpp  threading.cpp  threading.hpp
src/rrr/misc/: alarm.hpp
src/rrr/reactor/: coroutine.cc  coroutine.h  epoll_wrapper.h  event.cc  event.h  reactor.cc  reactor.h
src/rrr/rlog/: log_service.h  rlog.cpp  rlog.h
src/rrr/rpc/: client.cpp  (+5 more)
test/: benchmark_service.cc  benchmark_service.h  rpc_microbench.cc  rpcbench.cc  test_alock.cc  test_and_event.cc  test_deterministic.cc  test_future.cc  test_marshal.cc  test_marshal_simple.cc  test_reactor.cc  test_reactor_extended.cc  test_reactor_minimal.cc  test_rpc.cc  test_rpc_extended.cc  test_timeout_race.cc  test_tpca.cc
(+24 files in other folders)
